# change-control-plane

./: .env.sample  .gitignore  CONTRIBUTING.md  Makefile  README.md  go.mod  roadmap.md
.github/workflows/: ci.yml
cmd/api/: main.go
cmd/artifact-safety-check/: main.go  main_test.go
cmd/cli/: main.go  main_test.go
cmd/live-proof-verify/: main.go  main_test.go
cmd/migrate/: main.go
cmd/reference-pilot-gitlab/: main.go
cmd/reference-pilot-verify/: main.go  main_test.go
cmd/reference-pilot-workload/: main.go
cmd/worker/: main.go
db/migrations/: 0001_initial.sql  0002_auth_multitenancy.sql  0003_operational_control_loop.sql  0004_live_runtime_integration.sql  0005_rollback_policies_and_status_events.sql  0006_user_passwords.sql  0007_live_business_integrations.sql  0008_pilot_runtime_depth.sql  0009_reference_integration_maturity.sql  0010_enterprise_readiness.sql  0011_browser_sessions.sql  0012_policy_subsystem.sql  (+5 more)
python/: README.md  intelligence_cli.py  pyproject.toml
python/analytics/: __init__.py  history.py
python/common/: __init__.py  models.py
python/risk_models/: __init__.py  explainable.py
python/simulation/: __init__.py  rollout.py
python/tests/: __init__.py  test_intelligence.py
scripts/: live-proof-preflight.sh  live-proof-validate.sh  live-proof-verify.sh  load-local-env.sh  reference-pilot-down.sh  reference-pilot-up.sh  reference-pilot-validate.sh  reference-pilot-verify.sh  release-readiness.sh  run-with-local-env.sh  smoke.sh
web/: index.html  package.json  playwright.config.ts  pnpm-lock.yaml  tsconfig.json
(+252 files in other folders)
