[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "change-control-plane-intelligence"
version = "0.1.0"
description = "Deterministic analytics and simulation helpers for Change Control Plane"
requires-python = ">=3.9"
readme = "README.md"

[tool.setuptools]
packages = ["analytics", "common", "risk_models", "simulation"]
